--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,16 @@
     height: 100vh;
 }
 
+.headerTitle {
+    cursor: pointer;
+}
+
+.headerContainer {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
 body {
     background-color: #eeeeee;
 }
