--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,6 +25,13 @@
     justify-content: center;
 }
 
+.paginationContainer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 body {
     background-color: #eeeeee;
 }
