Add basketball icon

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,3 +39,12 @@ body {
 ul {
     list-style-type: none;
 }
+
+.homeBallImage {
+    height: 40px;
+    margin-right: 10px;
+}
+
+.headerBallImage {
+    height: 40px;
+}
